--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <title>Operly</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="MoHash" />
+    <meta name="title" content="Operly" />
     <meta name="description" content="Meta Description" />
-    <meta name="keywords" content="Defi, mohash, blockchain, crypto, web3.0" />
+    <meta name="keywords" content="Defi, Operly, blockchain, crypto, web3.0" />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="English" />
-    <meta name="author" content="MoHash " />
+    <meta name="author" content="Operly " />
 
-    <meta name="title" content="MoHash" />
+    <meta name="title" content="Operly" />
     <meta name="description" content="Meta Description" />
 
     <link rel="icon" type="image/icon" sizes="96x96" href="favicon.ico" />
@@ -50,11 +50,11 @@
             height: 100%;
         }
 
-        #mohashBanner img,
-        #mohashYield img,
-        #mohashStable img,
-        #mohashScalable img,
-        #mohashSustain img {
+        #OperlyBanner img,
+        #OperlyYield img,
+        #OperlyStable img,
+        #OperlyScalable img,
+        #OperlySustain img {
             width: 100%;
             height: 100%;
         }
@@ -134,7 +134,7 @@
                     <div class="col-lg-6 col-12 order-first order-lg-last">
                         <div class="protocol-image text-center">
                             <div class="protocol-top-image ">
-                                <div class="top-banner-animation-video" id="mohashBanner">
+                                <div class="top-banner-animation-video" id="OperlyBanner">
                                     <img src='hero.png'></img>
 
                                 </div>
@@ -152,18 +152,18 @@
         </div>
     </section>
 
-    <section id="why_mohash" class="why-mohash mobile_padding_tb_100">
+    <section id="why_Operly" class="why-Operly mobile_padding_tb_100">
         <div class="container-fluid first-section">
             <div class="row padding_tb_200 mobile_padding_tb_40 align-items-center">
                 <div class="col-lg-6 col-12">
-                    <div class="why-mohash-image wow">
+                    <div class="why-Operly-image wow">
                         <div id="about">
                             <img src="one.png" />
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-12">
-                    <div class="why-mohash-caption wow">
+                    <div class="why-Operly-caption wow">
                         <h6>1.</h6>
                         <h2>
                             <span>Bring your organization into <strong class="primary">focus</strong>.</span>
@@ -176,7 +176,7 @@
             </div>
             <div class="row padding_tb_200 mobile_padding_tb_40 align-items-center">
                 <div class="col-lg-6 col-12">
-                    <div class="why-mohash-caption wow">
+                    <div class="why-Operly-caption wow">
                         <h6>2.</h6>
                         <h2>
                             <span>Build a <strong class="primary">winning</strong> team.</span>
@@ -186,7 +186,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-12 order-first order-lg-last">
-                    <div class="why-mohash-image wow">
+                    <div class="why-Operly-image wow">
                         <div id="two">
                             <img src="two.png" />
 
@@ -196,7 +196,7 @@
             </div>
             <div class="row padding_tb_200 mobile_padding_tb_40 align-items-center">
                 <div class="col-lg-6 col-12">
-                    <div class="why-mohash-image wow">
+                    <div class="why-Operly-image wow">
                         <div id="three">
                             <img src="three.png" />
 
@@ -204,7 +204,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-12">
-                    <div class="why-mohash-caption wow">
+                    <div class="why-Operly-caption wow">
                         <h6>3.</h6>
                         <h2>
                             <span>Move faster <strong class="primary">with accuracy</strong>.</span>
@@ -217,7 +217,7 @@
             </div>
             <div class="row padding_tb_200 mobile_padding_tb_40 align-items-center">
                 <div class="col-lg-6 col-12">
-                    <div class="why-mohash-caption">
+                    <div class="why-Operly-caption">
                         <h6>4.</h6>
                         <h2>
                             <span>Get ready for <strong class="primary">fundraising</strong>.</span>
@@ -228,7 +228,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-12 order-first order-lg-last">
-                    <div class="why-mohash-image wow">
+                    <div class="why-Operly-image wow">
                         <div id="four">
                             <img src="four.png" />
 
