--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="" id="navbar">
         <nav class="navbar navbar-expand-lg navbar-light sticky-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><img src="logo-dark.png" loading="lazy" alt="logo"
+                <a class="navbar-brand"><img src="logo-dark.png" loading="lazy" alt="logo"
                         class="img-fluid" /></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile_nav"
                     aria-controls="mobile_nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -112,7 +112,7 @@
                                 <!-- mobile -->
                                 <div class="mobile-device-show mobile-animation-circle">
                                     <div class="view-products contact-us-wrapper ">
-                                        <button>
+                                        <button class="primary">
                                             <span>Learn More</span>
                                         </button>
                                     </div>
@@ -122,7 +122,7 @@
                                 <!-- desktop -->
                                 <div class="navigate-buttons mobile-device-hide mobile-animation-circle">
                                     <div class="view-products contact-us-wrapper ">
-                                        <button>
+                                        <button class="primary">
                                             <span>Learn More</span>
                                         </button>
                                     </div>
@@ -250,10 +250,12 @@
 
                 </div>
                 <div class="col-lg-8">
-                    <p>We believe in your potential to impact lives. The world needs great entrepreneurial leaders to build communities, provide jobs, and drive innovation.</p>
+                    <p>We believe in your potential to impact lives. The world needs great entrepreneurial leaders to
+                        build communities, provide jobs, and drive innovation.</p>
 
-                    <p>We help founders execute their vision by getting you up and running, operating at scale, preparing for investment, and driving revenue.
-                        </p>
+                    <p>We help founders execute their vision by getting you up and running, operating at scale,
+                        preparing for investment, and driving revenue.
+                    </p>
                 </div>
             </div>
         </div>
@@ -264,11 +266,12 @@
             <div class="row align-items-center">
                 <div class="col-lg-7">
                     <h2>What are you waiting for?</h2>
-                    <p>There's no better time to get in the driver's seat. With Operly's powerful organization and visualization tools, you'll accomplish great things.</p>
+                    <p>There's no better time to get in the driver's seat. With Operly's powerful organization and
+                        visualization tools, you'll accomplish great things.</p>
                     <div class="mobile-device-show mobile-animation-circle">
                         <div class="view-products contact-us-wrapper ">
-                            <button>
-                                <span>Contact Us</span>
+                            <button class="secondary">
+                                <span>Join the Waitlist</span>
                             </button>
                         </div>
 
@@ -277,8 +280,8 @@
                     <!-- desktop -->
                     <div class="navigate-buttons mobile-device-hide mobile-animation-circle">
                         <div class="view-products contact-us-wrapper ">
-                            <button>
-                                <span>Contact Us</span>
+                            <button class="secondary">
+                                <span>Join the Waitlist</span>
                             </button>
                         </div>
                     </div>
@@ -296,13 +299,41 @@
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <div class="footer-logo wow animated fadeInUp">
-                        <a><img src="logo-dark.png"
-                                class="img-fluid" loading="lazy" /></a>
+                        <a><img src="logo-dark.png" class="img-fluid" loading="lazy" /></a>
                     </div>
 
                 </div>
                 <div class="col-lg-6">
-                    <input>
+                    <div id="mc_embed_signup">
+                        <form
+                            action="https://oper.us18.list-manage.com/subscribe/post?u=6764407c14ae5b4426cec3af3&amp;id=1140ac1fea&amp;f_id=002d17e7f0%22"  method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                            target="_blank" novalidate>
+                            <div id="mc_embed_signup_scroll">
+                                <h2>Subscribe to our newsletter</h2>
+                                <div class="mc-field-group">
+                                    <input placeholder="Enter your email" type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"
+                                        required>
+                                    <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+                                </div>
+                                <div id="mce-responses" class="clear foot">
+                                    <div class="response" id="mce-error-response" style="display:none"></div>
+                                    <div class="response" id="mce-success-response" style="display:none"></div>
+                                </div>
+                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                                        name="b_6764407c14ae5b4426cec3af3_1140ac1fea" tabindex="-1" value=""></div>
+                                <div class="optionalParent">
+                                    <div class="clear foot">
+                                        <input type="submit" value="Subscribe" name="subscribe"
+                                            id="mc-embedded-subscribe" class="button">
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <script type='text/javascript'
+                        src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+                    <script
+                        type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
                 </div>
             </div>
         </div>
