--- a/index.html
+++ b/index.html
@@ -25,44 +25,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet" />
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
-        integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-    <style>
-        .founders-profile-video>img {
-            width: 180px !important;
-            height: 180px !important;
-            border-radius: 50%;
-        }
-
-        .emp-mobile {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .emp {
-            width: 100%;
-            height: 100%;
-        }
-
-        #OperlyBanner img,
-        #OperlyYield img,
-        #OperlyStable img,
-        #OperlyScalable img,
-        #OperlySustain img {
-            width: 100%;
-            height: 100%;
-        }
-
-        .bottom-text-footer {
-            margin-top: 18px;
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -75,23 +39,12 @@
                     aria-controls="mobile_nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="mobile-device-show mobile-animation-circle">
+                <div style="display: inline-flex;" class="">
+                    <a class="nav-link mobile_hidden_menu text_" href="#about">About Us</a>
 
-                    <div class="contact-wrapper">
-                        <a class="nav-link mobile_hidden_menu text_">Contact</a>
-                    </div>
+                    <a class="nav-link mobile_hidden_menu text_" href="#popup"><span id="button">Contact</span></a>
 
-                </div>
-                <div class="collapse navbar-collapse" id="mobile_nav">
-                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0 float-md-right"></ul>
-                    <ul class="navbar-nav navbar-light">
-                        <li class="nav-item">
-                            <a class="nav-link mobile_hidden_menu text_" href="#about">About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link mobile_hidden_menu text_">Contact</a>
-                        </li>
-                    </ul>
+
                 </div>
             </div>
         </nav>
@@ -109,22 +62,10 @@
                                 prepare for fund-raising with our plug-and-play technology and proven processes.</p>
                             <div class="join-discord pt-4 pb-4 wow">
 
-                                <!-- mobile -->
-                                <div class="mobile-device-show mobile-animation-circle">
-                                    <div class="view-products contact-us-wrapper ">
-                                        <button class="primary">
-                                            <span>Learn More</span>
-                                        </button>
-                                    </div>
-
-                                </div>
-
                                 <!-- desktop -->
-                                <div class="navigate-buttons mobile-device-hide mobile-animation-circle">
+                                <div class="navigate-buttons">
                                     <div class="view-products contact-us-wrapper ">
-                                        <button class="primary">
-                                            <span>Learn More</span>
-                                        </button>
+                                        <a class="button" id="button2" href="#popup"><span>Learn More</span></a>
                                     </div>
                                 </div>
 
@@ -245,11 +186,13 @@
             <h4 class="primary text-center">Our Mission</h4>
             <h2 class="text-center">To empower a generation of founders.</h2>
             <div class="row align-items-center">
-                <div class="col-lg-4">
-
+                <div class="col-lg-6">
+                    <div id="five">
+                        <img src="mission.jpeg" />
+                    </div>
 
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-6">
                     <p>We believe in your potential to impact lives. The world needs great entrepreneurial leaders to
                         build communities, provide jobs, and drive innovation.</p>
 
@@ -264,31 +207,17 @@
     <section class="what-are-you-waiting-for padding_top_150 padding_bottom_150 mobile_ptb_70">
         <div class="container-fluid">
             <div class="row align-items-center">
-                <div class="col-lg-7">
+                <div class="col-lg-12 text-center">
                     <h2>What are you waiting for?</h2>
                     <p>There's no better time to get in the driver's seat. With Operly's powerful organization and
                         visualization tools, you'll accomplish great things.</p>
-                    <div class="mobile-device-show mobile-animation-circle">
-                        <div class="view-products contact-us-wrapper ">
-                            <button class="secondary">
-                                <span>Join the Waitlist</span>
-                            </button>
-                        </div>
-
-                    </div>
 
                     <!-- desktop -->
-                    <div class="navigate-buttons mobile-device-hide mobile-animation-circle">
+                    <div class="text-center">
                         <div class="view-products contact-us-wrapper ">
-                            <button class="secondary">
-                                <span>Join the Waitlist</span>
-                            </button>
+                            <a class="secondary" id="button3" href="#popup"><span>Join The Waitlist</span></a>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-5">
-
-
                 </div>
             </div>
         </div>
@@ -331,13 +260,87 @@
                         </form>
                     </div>
                     <script type='text/javascript'
-                        src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+                        src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
                     <script
                         type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
                 </div>
             </div>
         </div>
     </section>
+
+    <div id="overlay"></div>
+    <div id="popup">
+        <div class="popupcontrols">
+            <span id="popupclose">X</span>
+        </div>
+        <div class="popupcontent">
+            <div id="mc_embed_signup">
+                <form
+                    action="https://oper.us18.list-manage.com/subscribe/post?u=6764407c14ae5b4426cec3af3&amp;id=1140ac1fea&amp;f_id=002d17e7f0%22"  method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                    target="_blank" novalidate>
+                    <div id="mc_embed_signup_scroll">
+                        <h2>Join the <strong class="primary">waitlist</strong></h2>
+                        <div class="mc-field-group">
+                            <input placeholder="Enter your email" type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"
+                                required>
+                            <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+                        </div>
+                        <div id="mce-responses" class="clear foot">
+                            <div class="response" id="mce-error-response" style="display:none"></div>
+                            <div class="response" id="mce-success-response" style="display:none"></div>
+                        </div>
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                                name="b_6764407c14ae5b4426cec3af3_1140ac1fea" tabindex="-1" value=""></div>
+                        <div class="optionalParent">
+                            <div class="clear foot">
+                                <input type="submit" value="Subscribe" name="subscribe"
+                                    id="mc-embedded-subscribe" class="button">
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <script type="text/javascript">
+	// Initialize Variables
+	var closePopup = document.getElementById("popupclose");
+	var overlay = document.getElementById("overlay");
+	var popup = document.getElementById("popup");
+	var button = document.getElementById("button");
+    var button2 = document.getElementById("button2");
+    var button3 = document.getElementById("button3");
+    var button4 = document.getElementById("mc-embedded-subscribe");
+
+
+	// Close Popup Event
+	closePopup.onclick = function() {
+	  overlay.style.display = 'none';
+	  popup.style.display = 'none';
+	};
+    overlay.onclick = function() {
+	  overlay.style.display = 'none';
+	  popup.style.display = 'none';
+	};
+	// Show Overlay and Popup
+	button.onclick = function() {
+	  overlay.style.display = 'block';
+	  popup.style.display = 'block';
+	}
+    button2.onclick = function() {
+	  overlay.style.display = 'block';
+	  popup.style.display = 'block';
+	}
+    button3.onclick = function() {
+	  overlay.style.display = 'block';
+	  popup.style.display = 'block';
+	}
+    button4.onclick = function() {
+    overlay.style.display = 'none';
+	  popup.style.display = 'none';
+	}
+    </script>
 
     <script>
 
