--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>Operly</title>
+    <title>Operly | Empowering a Generation of Founders</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" content="Operly" />
-    <meta name="description" content="Meta Description" />
+    <meta name="description" content="We're a group of start-uper's who help founders grow their SaaS business and prepare for fund-raising with our plug-and-play technology and proven processes." />
     <meta name="keywords" content="Defi, Operly, blockchain, crypto, web3.0" />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -14,7 +14,7 @@
     <meta name="author" content="Operly " />
 
     <meta name="title" content="Operly" />
-    <meta name="description" content="Meta Description" />
+    <meta name="description" content="We're a group of start-uper's who help founders grow their SaaS business and prepare for fund-raising with our plug-and-play technology and proven processes." />
 
     <link rel="icon" type="image/icon" sizes="96x96" href="favicon.ico" />
     <link href="css/styles.css" rel="stylesheet" />
